# gamescope-recorder

./: .gitignore  Cargo.toml  Justfile  README.md  analyze_video.py  run_rc_comparison.sh
examples/: oneframe  oneframe.c  oneframe.rs
src/: capture.rs  encode.rs  encode_ffmpeg.rs  encode_sample.rs  frame_buffer.rs  main.rs  scale_sample.rs  vaapi_scaler.rs
