[package]
name = "gamescope-recorder"
version = "0.1.0"
edition = "2021"
authors = ["Carlos Bentzen <cadubentzen@igalia.com>"]

[dependencies]
cros-codecs = { path = "../cros-codecs", features = ["vaapi"] }
pipewire = { path = "../pipewire-rs/pipewire", features = ["v0_3_77"] }
libspa = { path = "../pipewire-rs/libspa", features = ["v0_3_75"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.4.7"
libc = "0.2.174"
memmap2 = "0.9.5"

[[bin]]
name = "encode-sample"
path = "src/encode_sample.rs"

[[bin]]
name = "scale-sample"
path = "src/scale_sample.rs"

[patch.crates-io]
cros-libva = { path = "../cros-libva/lib" }
